Add item show fix

--- a/TodoMVC.Server/TodoMVC.Server.csproj
+++ b/TodoMVC.Server/TodoMVC.Server.csproj
@@ -80,6 +80,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\TodoItemController.cs" />
     <Compile Include="Controllers\TodoListController.cs" />
     <Compile Include="Middleware\HeaderMiddleware.cs" />
     <Compile Include="Program.cs" />
