--- a/TodoMVC.Client/TodoMVC.Client.csproj
+++ b/TodoMVC.Client/TodoMVC.Client.csproj
@@ -22,13 +22,16 @@
     <Content Include="app\assets\css\bootstrap.css" />
     <Content Include="app\assets\css\bootstrap.min.css" />
     <Content Include="app\assets\fonts\glyphicons-halflings-regular.svg" />
-    <Content Include="app\assets\js\bootstrap.js" />
-    <Content Include="app\assets\js\bootstrap.min.js" />
+    <Content Include="app\assets\js\lib\bootstrap.js" />
+    <Content Include="app\assets\js\lib\bootstrap.min.js" />
     <Content Include="app\js\app.js" />
     <Content Include="app\js\controllers.js" />
     <Content Include="app\js\directives.js" />
     <Content Include="app\js\filters.js" />
     <Content Include="app\js\services.js" />
+    <Content Include="app\assets\js\lib\angular-resource.js" />
+    <Content Include="app\assets\js\lib\angular-route.js" />
+    <Content Include="app\assets\js\lib\angular.js" />
     <Content Include="app\partials\todoList-list.html" />
     <Content Include="app\index.html" />
     <Content Include="web.config" />
@@ -44,9 +47,7 @@
       <DependentUpon>web.config</DependentUpon>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="app\lib\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
