--- a/TodoMVC.Client/TodoMVC.Client.csproj
+++ b/TodoMVC.Client/TodoMVC.Client.csproj
@@ -32,20 +32,14 @@
     <Content Include="app\assets\js\lib\angular-resource.js" />
     <Content Include="app\assets\js\lib\angular-route.js" />
     <Content Include="app\assets\js\lib\angular.js" />
+    <Content Include="app\partials\todoList-create.html" />
     <Content Include="app\partials\todoList-list.html" />
     <Content Include="app\index.html" />
-    <Content Include="web.config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="app\assets\fonts\glyphicons-halflings-regular.eot" />
     <Content Include="app\assets\fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="app\assets\fonts\glyphicons-halflings-regular.woff" />
-    <None Include="web.Debug.config">
-      <DependentUpon>web.config</DependentUpon>
-    </None>
-    <None Include="web.Release.config">
-      <DependentUpon>web.config</DependentUpon>
-    </None>
   </ItemGroup>
   <ItemGroup />
   <PropertyGroup>
