--- a/TodoMVC.Server/App.config
+++ b/TodoMVC.Server/App.config
@@ -7,6 +7,7 @@
   <!-- OWIN configuration -->
   <appSettings>
     <add key="ClientOrigin" value="http://127.0.0.1:49522" />
+    <add key="AllowedMethods" value="OPTIONS, GET, PUT, DELETE, POST, TRACE" />
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
