Added error logger, added jquery lib local.

--- a/TodoMVC.Server/App.config
+++ b/TodoMVC.Server/App.config
@@ -8,6 +8,7 @@
   <appSettings>
     <add key="ClientOrigin" value="http://127.0.0.1:49970" />
     <add key="AllowedMethods" value="OPTIONS, GET, PUT, DELETE, POST, TRACE" />
+    <add key="AllowedHeaders" value="Content-Type" />
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
