Work on adding todoitem backend, also fixed bug that would show the masked fields to wrong mapping.

--- a/TodoMVC.Core/TodoMVC.Core.csproj
+++ b/TodoMVC.Core/TodoMVC.Core.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="StateHandlers\GetStatesHandler.cs" />
+    <Compile Include="TodoItemHandlers\CreateTodoItemHandler.cs" />
     <Compile Include="TodoListHandlers\EditTodoListHandler.cs" />
     <Compile Include="TodoListHandlers\CreateTodoListHandler.cs" />
     <Compile Include="TodoListHandlers\DeleteTodoListHandler.cs" />
@@ -80,9 +81,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="TodoItemHandlers\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
