edit item now works fully

--- a/TodoMVC.Server/TodoMVC.Server.csproj
+++ b/TodoMVC.Server/TodoMVC.Server.csproj
@@ -96,8 +96,10 @@
   <ItemGroup>
     <Compile Include="Controllers\StateController.cs" />
     <Compile Include="Mappers\CreateTodoItemMapper.cs" />
+    <Compile Include="Mappers\EditTodoItemMapper.cs" />
     <Compile Include="Mappers\EditTodoListMapper.cs" />
     <Compile Include="Models\CreateTodoItemModel.cs" />
+    <Compile Include="Models\EditTodoItemModel.cs" />
     <Compile Include="Models\EditTodoListModel.cs" />
     <Compile Include="Controllers\TodoItemController.cs" />
     <Compile Include="Controllers\TodoListController.cs" />
