--- a/TodoMVC.Core/TodoMVC.Core.csproj
+++ b/TodoMVC.Core/TodoMVC.Core.csproj
@@ -56,6 +56,7 @@
     <Compile Include="StateHandlers\GetStatesHandler.cs" />
     <Compile Include="TodoItemHandlers\CreateTodoItemHandler.cs" />
     <Compile Include="TodoItemHandlers\DeleteTodoItemHandler.cs" />
+    <Compile Include="TodoItemHandlers\EditTodoItemHandler.cs" />
     <Compile Include="TodoItemHandlers\GetTodoItemHandler.cs" />
     <Compile Include="TodoListHandlers\EditTodoListHandler.cs" />
     <Compile Include="TodoListHandlers\CreateTodoListHandler.cs" />
